--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = {extras = ["voice"], version = "^1.3.3"}
+"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
+toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
