--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ black = "^19.10b0"
 isort = "^4.3.21"
 pre-commit = "^2.3.0"
 
+[tool.poetry.scripts]
+bot = "handsome.bot:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
