--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ python = "^3.8"
 "discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
 toml = "^0.10.0"
 pydantic = "^1.5.1"
+devtools = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
 pre-commit = "^2.3.0"
+mypy = "^0.770"
+flake8 = "^3.7.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
