--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,42 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.5.0
+  rev: v3.2.0
   hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-  - id: pretty-format-json
   - id: check-ast
+  - id: check-byte-order-marker
+  - id: check-builtin-literals
+  - id: check-case-conflict
+  - id: check-docstring-first
   - id: check-json
-  - id: check-yaml
-  - id: check-toml
+  - id: pretty-format-json
   - id: check-merge-conflict
+  - id: check-toml
+  - id: check-xml
+  - id: check-yaml
+  - id: debug-statements
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.7.2
+  hooks:
+  - id: pyupgrade
+    args: [--py36-plus]
+- repo: https://github.com/Lucas-C/pre-commit-hooks
+  rev: v1.1.9
+  hooks:
+  - id: forbid-crlf
+  - id: remove-crlf
+  - id: forbid-tabs
+  - id: remove-tabs
 - repo: https://github.com/psf/black
-  rev: 19.10b0
+  rev: 20.8b1
   hooks:
   - id: black
-- repo: https://github.com/timothycrosley/isort
-  rev: 4.3.21
+- repo: https://github.com/PyCQA/isort
+  rev: 5.4.2
   hooks:
   - id: isort
+- repo: https://github.com/necaris/pre-commit-pyright
+  rev: 1.1.53
+  hooks:
+  - id: pyright
