--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,14 @@ python = "^3.8"
 toml = "^0.10.0"
 pydantic = "^1.5.1"
 devtools = "^0.5.1"
+aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
 pre-commit = "^2.3.0"
-mypy = "^0.770"
 flake8 = "^3.7.9"
+pyupgrade = "^2.7.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
