--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ bot = "handsome:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
 toml = "^0.10.2"
 pydantic = "^1.8.2"
 aioredis = "^1.3.1"
+webcolors = "^1.11.1"
+"discord.py" = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
